--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   equatable:
   sqflite: ^2.2.6
   path_provider: ^2.0.14
+  get: ^4.6.5
+  page_transition: ^2.0.9
+  google_fonts: ^4.0.4
+  lite_rolling_switch: ^1.0.1
 
 
 dev_dependencies:
